WebCore: Multiple Undos removes the last posted comment and/or the ones before it. <rdar://problem/6557066> https://bugs.webkit.org/show_bug.cgi?id=32079

Reviewed by Adele Peterson.

The fix consists in preventing Undos and Redos to be applied to elements that
are no longer editable. We do not attempt to remove the commands from the queue.
It is a relatively simple fix that comes with a little extra overhead for the apply
and unapply methods where we are now performing the editability check.

Test: editing/undo/undo-indent-noneditable.html

* editing/AppendNodeCommand.cpp:
(WebCore::AppendNodeCommand::doApply):
(WebCore::AppendNodeCommand::doUnapply):
* editing/DeleteFromTextNodeCommand.cpp:
(WebCore::DeleteFromTextNodeCommand::doApply):
(WebCore::DeleteFromTextNodeCommand::doUnapply):
* editing/InsertIntoTextNodeCommand.cpp:
(WebCore::InsertIntoTextNodeCommand::doApply):
(WebCore::InsertIntoTextNodeCommand::doUnapply):
* editing/InsertNodeBeforeCommand.cpp:
(WebCore::InsertNodeBeforeCommand::doApply):
(WebCore::InsertNodeBeforeCommand::doUnapply):
* editing/JoinTextNodesCommand.cpp:
(WebCore::JoinTextNodesCommand::doApply):
(WebCore::JoinTextNodesCommand::doUnapply):
* editing/MergeIdenticalElementsCommand.cpp:
(WebCore::MergeIdenticalElementsCommand::doApply):
(WebCore::MergeIdenticalElementsCommand::doUnapply):
* editing/RemoveNodeCommand.cpp:
(WebCore::RemoveNodeCommand::doApply):
(WebCore::RemoveNodeCommand::doUnapply):
* editing/SplitElementCommand.cpp:
(WebCore::SplitElementCommand::executeApply):
(WebCore::SplitElementCommand::doUnapply):
* editing/SplitTextNodeCommand.cpp:
(WebCore::SplitTextNodeCommand::doApply):
(WebCore::SplitTextNodeCommand::doUnapply):
* editing/WrapContentsInDummySpanCommand.cpp:
(WebCore::WrapContentsInDummySpanCommand::doUnapply):
(WebCore::WrapContentsInDummySpanCommand::doReapply):

LayoutTests: Multiple Undos removes the last posted comment and/or the ones before it.
<rdar://problem/6557066>
https://bugs.webkit.org/show_bug.cgi?id=32079

Reviewed by Adele Peterson.

Added test to verify that undo has no effect when an element is
no longer editable.

* editing/undo/undo-indent-noneditable-expected.txt: Added.
* editing/undo/undo-indent-noneditable.html: Added.



Canonical link: https://commits.webkit.org/43072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51645 268f45cc-cd09-0410-ab3c-d52691b4dbfc